refactored postService class to extract two methods from redundant code, so that converting a post to a fetchedPostDTO is not repeated and also converting a list. Also update fetchPost to search for a author image and get that from the blog storage if present